full fork/join parallel