@@ -2,6 +2,9 @@ package net.butfly.albacore.io.faliover;
 
 import java.io.IOException;
 import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -10,6 +13,7 @@ import net.butfly.albacore.io.Message;
 import net.butfly.albacore.io.OutputImpl;
 import net.butfly.albacore.io.Streams;
 import net.butfly.albacore.io.faliover.Failover.FailoverException;
+import net.butfly.albacore.utils.Collections;
 
 /**
  * Output with buffer and failover supporting.<br>
@@ -21,16 +25,16 @@ import net.butfly.albacore.io.faliover.Failover.FailoverException;
  *
  * @param <M>
  */
-public abstract class FailoverOutput<M extends Message<String, ?, M>> extends OutputImpl<M> {
-	private final Failover<String, M> failover;
+public abstract class FailoverOutput<K, M extends Message<K, ?, M>> extends OutputImpl<M> {
+	private final Failover<K, M> failover;
+	final int packageSize;
 
-	protected FailoverOutput(String name, Function<byte[], ? extends M> constructor, String failoverPath, int packageSize, int parallelism)
+	protected FailoverOutput(String name, Function<byte[], ? extends M> constructor, String failoverPath, int packageSize)
 			throws IOException {
 		super(name);
-		if (failoverPath == null) failover = new HeapFailover<String, M>(name(), kvs -> write(kvs._1, kvs._2), this::commit, constructor,
-				packageSize, parallelism);
-		else failover = new OffHeapFailover<String, M>(name(), kvs -> write(kvs._1, kvs._2), this::commit, constructor, failoverPath, null,
-				packageSize, parallelism) {};
+		this.packageSize = packageSize;
+		failover = failoverPath == null ? new HeapFailover<K, M>(name(), this, constructor)
+				: new OffHeapFailover<K, M>(name(), this, constructor, failoverPath, null);
 	}
 
 	@Override
@@ -39,9 +43,9 @@ public abstract class FailoverOutput<M extends Message<String, ?, M>> extends Ou
 		failover.open();
 	}
 
-	protected abstract int write(String key, Collection<M> values) throws FailoverException;
+	protected abstract int write(K key, Collection<M> values) throws FailoverException;
 
-	protected void commit(String key) {}
+	protected void commit(K key) {}
 
 	@Override
 	public final boolean enqueue(M e) {
@@ -50,8 +54,19 @@ public abstract class FailoverOutput<M extends Message<String, ?, M>> extends Ou
 
 	@Override
 	public final long enqueue(Stream<M> els) {
-		return failover.enqueueTask(io.collect(Streams.of(els), Collectors.groupingBy(e -> e.partition(), Collectors.mapping(t -> t,
-				Collectors.toList()))));
+		Map<K, List<M>> map = io.collect(Streams.of(els), Collectors.groupingBy(e -> e.partition(), Collectors.mapping(t -> t, Collectors
+				.toList())));
+		AtomicInteger count = new AtomicInteger(0);
+		io.each(map.entrySet(), e -> {
+			count.addAndGet(e.getValue().size());
+			io.each(Collections.chopped(e.getValue(), packageSize), pkg -> failover.output(e.getKey(), pkg));
+			try {
+				io.run(() -> commit(e.getKey()));
+			} catch (Exception err) {
+				logger().warn("[" + name() + "] commit failure on core [" + e.getKey() + "]", err);
+			}
+		});
+		return count.get();
 	}
 
 	@Override
@@ -65,9 +80,5 @@ public abstract class FailoverOutput<M extends Message<String, ?, M>> extends Ou
 
 	public final long fails() {
 		return failover.size();
-	}
-
-	public final int tasks() {
-		return failover.tasks();
 	}
 }
